--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,4 @@
-body {
+/* body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
@@ -7,7 +7,45 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 
-code {
+/* code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}  */
+
+/* 
+.container{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  row-gap: 10px;
+
+} */
+
+/* .h1{
+  margin-top: 50px;
+} */
+
+.form{
+  height: 30%;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  /* padding: 1rem; */
+  margin-right: 2rem;
+  margin-left: 2rem;
+  margin-top: 10px;
+  row-gap: 20px;
+  margin-bottom: 30px;
 }
+
+@media (max-width: 600px){
+  .paper{
+    /* width: 400%; */
+
+    background-color: red;
+  }
+}
+
+
+
+
